--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
   font-weight: 400;
   src: url(https://fonts.gstatic.com/s/barlowcondensed/v12/HTx3L3I-JCGChYJ8VI-L6OO_au7B6xHT3w.ttf) format('truetype');
 }
+#root {
+	background-color: #2e3440;
+}
 </style>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
